make more comprehensibly async performance test